// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Micro Bar Chart Renders with data 1`] = `
<div
  class="MicroBarChart--container- undefined"
>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number One"
      >
        Bar Number One
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="10"
      >
        10
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:10%;background-color:#0f828f"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number Two"
      >
        Bar Number Two
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="100"
      >
        100
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:100%;background-color:#5ac2ce"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart custom colors 1`] = `
<div
  class="MicroBarChart--container- undefined"
>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number One"
      >
        Bar Number One
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="10"
      >
        10
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:10%;background-color:#f0ab00"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number Two"
      >
        Bar Number Two
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="100"
      >
        100
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:100%"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart element selection 1`] = `
<div
  class="MicroBarChart--container- undefined"
>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number One"
      >
        Bar Number One
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="10"
      >
        10
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:10%;background-color:#0f828f"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart maxWidth selection 1`] = `
<div
  class="MicroBarChart--container- undefined"
  style="max-width:200px"
>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number One"
      >
        Bar Number One
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="10"
      >
        10
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:10%;background-color:#0f828f"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
  <div>
    <div
      class="MicroBarChart--labelContainer-"
    >
      <span
        class="MicroBarChart--label-"
        title="Bar Number Two"
      >
        Bar Number Two
      </span>
      <span
        class="MicroBarChart--text-"
        style="font-size:12px"
        title="100"
      >
        100
      </span>
    </div>
    <div
      class="MicroBarChart--valueContainer-"
    >
      <div
        class="MicroBarChart--valueBar-"
        style="width:100%;background-color:#5ac2ce"
      />
      <div
        class="MicroBarChart--fillUp-"
      />
    </div>
  </div>
</div>
`;
